--- a/ARTIKEL_13516039.md
+++ b/ARTIKEL_13516039.md
@@ -10,3 +10,9 @@
 
 ## Analisis
 	Berdasarkan data yang diperoleh, data akan diproses dan ditampilkan menjadi grafik yang akan menunjukkan tingkat pendapatan suatu pool setiap jamnya. Akan ditampilkan juga tingkat gas yang dipakai serta perbandingan antara gas dan reward yang diperoleh. berdasarkan data-data yang didapakan dianalisis data selama 1 hari terakhir didapatkan bahwa pool Ethermine memiliki persentase mining yang tinggi jika dibandingkan dengan yang lainnya.
+
+## Kesimpulan
+	Berdasarkan data yang diperoleh pada tanggal 6/8/2018 untuk melakukan penambangan blockchain Ethermine, Pool yang memiliki tingkat reward yang cukup tinggi adalah Ethermine dengan rata-rata pendapatan diatas 200 Ether per jam yang jika di konversi ke rupiah adalah sebesar Rp. 1.180.012.836/ jam. Pendapatan yang diperoleh ini bukanlah murni yang diperoleh oleh seseorang akan tetapi harus dibagi-bagi berdasarkan kontribusi seseorang terhadap pool tersebut.
+
+### Dibuat Oleh :
+	Alvin Limassa / 13516039
