--- a/ARTIKEL_13516039.md
+++ b/ARTIKEL_13516039.md
@@ -12,7 +12,7 @@ Untuk melakukan mining atau menambang pada suatu blockchain umumnya masyarakat a
 Berdasarkan data yang diperoleh, data akan diproses dan ditampilkan menjadi grafik yang akan menunjukkan tingkat pendapatan suatu pool setiap jamnya. Akan ditampilkan juga tingkat gas yang dipakai serta perbandingan antara gas dan reward yang diperoleh. berdasarkan data-data yang didapakan dianalisis data selama 1 hari terakhir didapatkan bahwa pool Ethermine memiliki persentase mining yang tinggi jika dibandingkan dengan yang lainnya.
 
 ## Kesimpulan
-Berdasarkan data yang diperoleh pada tanggal 6/8/2018 untuk melakukan penambangan blockchain Ethermine, Pool yang memiliki tingkat reward yang cukup tinggi adalah Ethermine dengan rata-rata pendapatan diatas 200 Ether per jam yang jika di konversi ke rupiah adalah sebesar Rp. 1.180.012.836/ jam. Pendapatan yang diperoleh ini bukanlah murni yang diperoleh oleh seseorang akan tetapi harus dibagi-bagi berdasarkan kontribusi seseorang terhadap pool tersebut.
+Berdasarkan data yang diperoleh pada tanggal 6/8/2018 untuk melakukan penambangan blockchain Ethermine, Pool yang memiliki tingkat reward yang cukup tinggi adalah Ethermine dengan rata-rata pendapatan diatas 200 Ether per jam yang jika di konversi ke rupiah adalah sebesar Rp. 1.180.012.836/ jam. Pendapatan yang diperoleh ini bukanlah murni yang diperoleh oleh seseorang akan tetapi harus dibagi-bagi berdasarkan kontribusi seseorang terhadap pool tersebut. Selain itu untuk perhitungan Reward/Gas atau jika dianalogikan sebagai mobil yaitu jumlah bensin yang diperlukan untuk menempuh jarak tertentu menunjukkan bahwa ethermine memiliki Reward/Gas yang lumayan baik sehingga untuk nilai yang dihasilkan dari sejumlah gas tertentu juga menguntungkan, disamping ethermine terdapat juga SprakPool yang menunjukkan data yang lumayan baik pada Reward/Gas sehingga memiliki peluang yang cukup baik untuk melakukan penambangan pada pool tersebut. Berdasarkan pengamatan visual terdapat beberapa jam yang memiliki pola yang sama yaitu turun pada jam-jam tertentu seperti pada jam 9 pagi, hal ini dimungkinkan karena banyaknya orang yang akan melakukan aktifitas dan menggunakan CPU mereka sehingga akan menurunkan kecepatan menambang mereka. Pada akhirnya saya dapat menimpulkan bahwa untuk saat ini pool yang lumayan menguntungkan dibanding pool lain adalah Ethermine dan Sparkpool sehingga kedua pool tersebut saat ini cocok bagi orang yang ingin mencoba untuk menambang Ethereum
 
 ### Dibuat Oleh :
 Alvin Limassa / 13516039
